codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__workflow_agent_activity_status.snap
---
source: tui/src/chatwidget/tests/workflows.rs
expression: "render_bottom_popup(&chat, 96)"
---
• Workflow: agent 1/3 (0s • esc to interrupt)
  └ calling MCP: github.get_pull_request · 17s since new activity
    Repairing 4 review items and 3 failed checks [2/7]


 ┃ Ask Codex to do anything

  gpt-5.6-sol default · /tmp/project
